@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Fix entirely broken HTML attribute parsing. Any attribute with a space in
+  its value like `alt="Some text"` would cause the parser to go
+  haywire. Reported by Shlomi Fish. GH #21.
+
+
 0.34   2019-03-30
 
 - When Markdent processes raw HTML in Markdown text it will now emit that HTML
